fix the swagger issue of cart
