# backend/src/routes/cart.routes.ts
@@ -2,6 +2,7 @@ import { Router } from "express";
 import {
     GetCartController,
     AddToCartController,
+    GetCartItemController,
     UpdateCartItemController,
     RemoveFromCartController,
     ClearCartController,
@@ -17,6 +18,7 @@ router.use(authMiddleware);
 // Cart routes
 router.get("/", GetCartController);
 router.post("/items", AddToCartController);
+router.get("/items/:itemId", GetCartItemController);
 router.put("/items/:itemId", UpdateCartItemController);
 router.delete("/items/:itemId", RemoveFromCartController);
 router.delete("/", ClearCartController);
